<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/car"
        android:backgroundTint="@color/WelcomeGrey"
        android:backgroundTintMode="multiply"
        android:orientation="vertical"
        tools:context=".LetsGoPanel">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BAC"
            android:layout_marginTop="1dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/alf"
                android:text="@string/BUY_AND_CUSTOMS"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/BAC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="95dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/cyber"
                android:text="@string/BC"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="90sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/byPremiumText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="12dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Buy_Premium_Luxury_And_All_Types_Of_Cars_Here"
                android:textColor="@color/GG"
                android:textSize="19sp"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_above="@+id/byPremiumText"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/letsSbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/WelcomeGrey"
                android:text="@string/Lets_Get_Started"
                android:textStyle="bold"
                app:cornerRadius="21dp" />
        </LinearLayout>
    </RelativeLayout>
</androidx.appcompat.widget.LinearLayoutCompat>

